--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
     "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "browserify": {
+    "transform": [
+      "vueify",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/YoshikiAbe/todo_list.git"
@@ -21,8 +34,12 @@
     "vue": "^2.2.6"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "gulp": "^3.9.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "vueify": "^9.4.1"
   }
 }
